# codeaudit

./: .gitignore  CHANGELOG.md  CONTRIBUTE.md  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml  python-static.yml  python-test.yml
docs/: CLIcommands.ipynb  _config.yml  _toc.yml  architecture.md  checksinformation.md  codeauditchecks.md  codeauditcommands.md  codeauditoverview.md  contribute.md  data_egress_implementation.md  data_exfiltration_detection.md  features.md  filescan.md  help.md  howtoscan.md  implementedvalidations.md  intro.md  issues.md  license.md  makeitbetter.md  markingissues.md  modulescan.md  project_philosophy.md  securecoding.md  sponsors.md  userguide.md  validatetips.md  whysast.md
docs/apidocs/: codeaudit.rst  modules.rst
docs/checks/: dynamicimport_check.md  ftp_check.md  path_check.md  subprocess_check.md  tarfile_extract_check.md  zipfile_check.md
docs/examples/: ca_api_example_basic.ipynb  ca_api_example_json.ipynb  ca_api_example_overview.ipynb  ca_api_example_scanning.ipynb  ca_checks.ipynb  checks.html  codeauditchecks.html  demoscan.json  example_risk_heatmap.ipynb  example_weakness_perfile_view.ipynb
src/codeaudit/: __about__.py  __init__.py  altairplots.py  api_helpers.py  api_interfaces.py  api_reporting.py  checkmodules.py  codeaudit.py  codeaudit_dashboard.py  complexitycheck.py  corecli.py  dashboard_reports.py  filehelpfunctions.py  htmlhelpfunctions.py  issuevalidations.py  privacy_lint.py  pypi_package_scan.py  reporting.py  security_checks.py  simple.css  suppression.py  totals.py
src/dashboard/: dashboardapp.py
tests/: count_lines_file1.py  test_apicalls.py  test_apicalls2.py  test_basicpatterns.py  test_chmod.py  test_constructspart2.py  test_correctexceptionuse.py  test_count_commentlines.py  test_directorycreation.py  test_directorycreation2.py  test_edgecases.py  test_ftp.py  test_hashstrenght.py  test_modulecheck.py  test_obfuscatingbuiltins.py  test_oschecks.py  test_pathcheck.py  test_pylintreport.py  test_pypiscan.py  test_random.py  test_secretfinding.py  test_standardlibconstructs.py  test_subprocess.py  test_suppression.py  test_suppressionlogic.py  test_totalscheck.py  test_wasmsafe_funtions.py  test_zstd.py
tests/spytestdir/: clean.py  elastic.py  example1.py  klyne.py  mixed.py  telemetry.py  telemetryfile2.py
tests/suppression/: sastsuppression_0.py  sastsuppression_1.py  sastsuppression_2.py
tests/unit_tests/: test_collectsourcefiles.py  test_filehelpfunctions.py  test_readinsourcefile.py
tests/validationfiles/: allshit.py  assert.py  (+37 more)
(+2 files in other folders)
