[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "codeaudit"
dynamic = ["version"] # This tells Hatch that version is dynamically determined
description = 'A modern Python security source code analyzer (SAST) based on distrust.'
readme = "README.md"
dependencies = ["fire==0.7.1","pandas==3.0.2","altair==6.0.0"]
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
keywords = ["SAST", "Python SAST", "SAST API", "Complexity Checker"]
authors = [
  { name = "Maikel Mardjan", email = "mike@bm-support.org" },
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "tox", "pylint", "black"]

[project.urls]
Documentation = "https://github.com/nocomplexity/codeaudit#readme"
Issues = "https://github.com/nocomplexity/codeaudit/issues"
Source = "https://github.com/nocomplexity/codeaudit"

[tool.hatch.version]
path = "src/codeaudit/__about__.py"


[tool.hatch.build.targets.wheel]
packages = ["src/codeaudit" , "src/dashboard"]
include = ["src/codeaudit/data/*.csv"]


[project.scripts]
codeaudit = "codeaudit.corecli:main"


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/codeaudit tests}"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.14", "3.13", "3.12", "3.11"]

[tool.hatch.envs.hatch-test]
randomize = true
dependencies = ["pytest", "pytest-cov", "coverage"]

[tool.black]
target-version = ["py311", "py312", "py313", "py314"]
extend-exclude ='(python2_file_willnotwork|dunderexec_with_parsing_error).py|validationfiles|suppression|spytestdir'

[tool.coverage.run]
branch = true
source = ["src/codeaudit"]

[tool.coverage.report]
show_missing = true

[tool.hatch.envs.hatch-static-analysis]
dependencies = ["black", "pylint"]

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = "black --target-version py313 --check src tests"
format-fix = "black --target-version py313 src tests"
lint-check = "pylint src tests"
